--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,6 @@ basepython =
     {py27}: {env:TOXPYTHON27:python2.7}
     {py36}: {env:TOXPYTHON36:python3.6}
 commands =
-    py.test {env:TOX_PYTEST_ARGS:-vv --cov=toil_say --cov-report=term-missing tests}
+    py.test {env:TOX_PYTEST_ARGS:-s -vv --cov=toil_say --cov-report=term-missing tests}
     pylint toil_say --rcfile={toxinidir}/.pylintrc
     pydocstyle toil_say --config={toxinidir}/.pydocstylerc
